# hackathon_aiqtoolkit

./: CHANGELOG.md  LICENSE-3rd-party.txt  README.md  install.bat  install.sh  manifest.yaml  mcp_server_notes.md  pyproject.toml  tavily_mcp_server.py
examples/HITL/por_to_jiratickets/: README.md  pyproject.toml
examples/HITL/por_to_jiratickets/src/aiq_por_to_jiratickets/: extract_por_tool.py  hitl_approval_tool.py  jira_tickets_tool.py
examples/HITL/por_to_jiratickets/src/aiq_por_to_jiratickets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/HITL/simple_calculator_hitl/: README.md  pyproject.toml
examples/HITL/simple_calculator_hitl/src/aiq_simple_calculator_hitl/: retry_react_agent.py
examples/HITL/simple_calculator_hitl/src/aiq_simple_calculator_hitl.egg-info/: SOURCES.txt
examples/RAG/simple_rag/: README.md  pyproject.toml
examples/RAG/simple_rag/configs/: milvus_memory_rag_config.yml  milvus_memory_rag_tools_config.yml  milvus_rag_config.yml  milvus_rag_config_its.yml  milvus_rag_tools_config.yml
examples/advanced_agents/alert_triage_agent/: README.md  pyproject.toml
examples/advanced_agents/alert_triage_agent/configs/: config_offline_llama_33.yml  config_offline_mode.yml
examples/advanced_agents/alert_triage_agent/data/: benign_fallback_offline_data.json  offline_data.csv  offline_data.json
examples/advanced_agents/alert_triage_agent/src/aiq_alert_triage_agent/: categorizer.py  classification_evaluator.py  hardware_check_tool.py  host_performance_check_tool.py  run.py  (+8 more)
examples/advanced_agents/alert_triage_agent/tests/: test_alert_triage_agent_workflow.py  test_categorizer.py  test_hardware_check_tool.py  test_host_performance_check_tool.py  test_maintenance_check.py  test_monitoring_process_check_tool.py  test_network_connectivity_check_tool.py  test_run.py  test_telemetry_metrics_host_heartbeat_check_tool.py  test_telemetry_metrics_host_performance_check_tool.py  test_utils.py
examples/custom_functions/automated_description_generation/: README.md  pyproject.toml
examples/custom_functions/automated_description_generation/configs/: config.yml
examples/custom_functions/plot_charts/: README.md  pyproject.toml
examples/custom_functions/plot_charts/data/: plot_charts_questions.json
examples/custom_functions/plot_charts/tests/: test_plot_charts_workflow.py
examples/documentation_guides/workflows/text_file_ingest/: pyproject.toml
examples/evaluation_and_profiling/email_phishing_analyzer/: Dockerfile  README.md  pyproject.toml
examples/evaluation_and_profiling/email_phishing_analyzer/configs/: config-llama-3.1-8b-instruct.yml  config-llama-3.3-70b-instruct.yml  config-mixtral-8x22b-instruct-v0.1.yml  config-phi-3-medium-4k-instruct.yml  config-phi-3-mini-4k-instruct.yml  config-reasoning.yml  config.yml
examples/evaluation_and_profiling/email_phishing_analyzer/data/: smaller_test.csv
examples/evaluation_and_profiling/email_phishing_analyzer/scripts/: run_phishing_evals_all.sh
examples/evaluation_and_profiling/simple_calculator_eval/: README.md  pyproject.toml
examples/evaluation_and_profiling/simple_calculator_eval/configs/: config-sizing-calc.yml  config-tunable-rag-eval.yml
examples/evaluation_and_profiling/simple_web_query_eval/: README.md  pyproject.toml
examples/evaluation_and_profiling/simple_web_query_eval/configs/: eval_config.yml  eval_config_llama33.yml  eval_only_config.yml  eval_upload.yml
examples/evaluation_and_profiling/simple_web_query_eval/data/: simple_questions.json
examples/evaluation_and_profiling/simple_web_query_eval/tests/: test_simple_web_query_eval.py
examples/evaluation_and_profiling/swe_bench/: README.md  pyproject.toml
examples/evaluation_and_profiling/swe_bench/configs/: config_gold.yml
examples/evaluation_and_profiling/swe_bench/data/: test_dataset_verified.json
examples/evaluation_and_profiling/swe_bench/tests/: test_swe_bench_eval.py
examples/frameworks/agno_personal_finance/: Dockerfile  README.md  pyproject.toml
examples/frameworks/agno_personal_finance/tests/: test_agno_personal_finance_workflow.py
examples/frameworks/multi_frameworks/: README.md  pyproject.toml
examples/frameworks/multi_frameworks/tests/: test_multi_frameworks_workflow.py
examples/frameworks/semantic_kernel_demo/: README.md  pyproject.toml
examples/frameworks/semantic_kernel_demo/data/: hotel_prices.json  local_events.json
examples/frameworks/semantic_kernel_demo/tests/: test_semantic_kernel_workflow.py
examples/front_ends/simple_auth/: README.md  pyproject.toml
examples/front_ends/simple_calculator_custom_routes/: README.md  pyproject.toml
examples/front_ends/simple_calculator_custom_routes/aiq_simple_calculator_custom_routes.egg-info/: PKG-INFO
examples/front_ends/simple_calculator_custom_routes/configs/: config-metadata.yml
examples/getting_started/simple_calculator/: Dockerfile  README.md  pyproject.toml
examples/getting_started/simple_calculator/configs/: config-reasoning.yml
examples/getting_started/simple_calculator/data/: simple_calculator.json
examples/getting_started/simple_calculator/tests/: test_simple_calculator_workflow.py  test_tools.py
examples/getting_started/simple_web_query/: Dockerfile  README.md  pyproject.toml
examples/getting_started/simple_web_query/tests/: test_simple_web_query_workflow.py  test_web_query_tool.py
examples/object_store/user_report/: README.md  pyproject.toml  serialize_file.py  upload_to_mysql.sh
examples/object_store/user_report/configs/: config_mem.yml  config_mysql.yml  config_s3.yml
examples/observability/redact_pii/: README.md  pyproject.toml
examples/observability/redact_pii/configs/: weave_redact_pii_config.yml
examples/observability/simple_calculator_observability/: README.md  pyproject.toml
examples/observability/simple_calculator_observability/aiq_simple_calculator_observability.egg-info/: PKG-INFO  requires.txt
examples/observability/simple_calculator_observability/configs/: config-catalyst.yml  config-langfuse.yml  config-langsmith.yml  config-patronus.yml  config-tracing.yml  config-weave.yml
(+648 files in other folders)
