[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "aiq_simple_calculator_hitl"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]~=1.2",
  "aiq_simple_calculator",
  "aiq_por_to_jiratickets",
]
requires-python = ">=3.11,<3.13"
description = "Simple Calculator Evaluation and Profiling - demonstrates AIQ toolkit evaluation capabilities"
keywords = ["ai", "hitl", "human in the loop", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../..", editable = true }
aiq_simple_calculator = { path = "../../getting_started/simple_calculator", editable = true }
aiq_por_to_jiratickets = { path = "../../HITL/por_to_jiratickets", editable = true }

[project.entry-points.'aiq.components']
aiq_simple_calculator_hitl = "aiq_simple_calculator_hitl.register"
