[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "aiq_simple_web_query_eval"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]~=1.2",
  "aiq_simple_web_query",
]
requires-python = ">=3.11,<3.13"
description = "Simple LangSmith-Documentation Agent Evaluation and Profiling - demonstrates AIQ toolkit evaluation capabilities"
keywords = ["ai", "evaluation", "profiling", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../..", editable = true }
aiq_simple_web_query = { path = "../../getting_started/simple_web_query", editable = true }
