[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "aiq_swe_bench"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]~=1.2",
  "swebench==3.0.3"
]
requires-python = ">=3.11,<3.13"
description = "Example for solving SWE bench problems"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../..", editable = true }

[project.entry-points.'aiq.components']
aiq_swe_bench = "aiq_swe_bench.register"
