[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
root = "../../.."

[project]
name = "aiq_simple_calculator_custom_routes"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]~=1.2",
  "aiq_simple_calculator",
]
requires-python = ">=3.11,<3.13"
description = "Simple Calculator Custom Routes - demonstrates AIQ toolkit custom API routes and metadata access"
keywords = ["ai", "api", "routes", "metadata", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../..", editable = true }
aiq_simple_calculator = { path = "../../getting_started/simple_calculator", editable = true }
