[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
root = "../../.."

[project]
name = "aiq_user_report"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[s3]", "aiqtoolkit[mysql]"
]
requires-python = ">=3.12"
description = "AIQ toolkit example that uses an Object Store"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
aiqtoolkit = { path = "../../..", editable = true }

[project.entry-points.'aiq.components']
aiq_user_report = "aiq_user_report.register"
